Update jvm GC